Remove guava dependency (#251)